--- a/homepage.html
+++ b/homepage.html
@@ -8,55 +8,11 @@
     
     <link href="/css/home.css" type="text/css" rel="stylesheet" charset="utf-8"> <!--連不上，一直錯一直幹-->
 
-    <style type="text/css">
-    body, html{
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-*{
-    margin: 0;
-    padding: 0;
-    font-family: monospace;
-    box-sizing: border-box;   
-}
-#container{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: #f7f7f7;   
-}
-nav{
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 200px;
-    margin-left: 0px;
-    height: 100%;   
-    background-color: #333333 ;
-
-}
-#logo{
-height: 50px;
-background-color: #333333;
-color: #f7f7f7;
-text-align: center;
-line-height: 50px;
-font-size: 1.3em;
-font-family: arial;
-}
-#logo span{
-    font-size: .8em;
-    font-family: monospace;
-    font-size: italic;
-    color: #f7f7f7;
-
-}
-    </style>
+ 
+  
 </head>
 <body>
-
+        <img src="/img/homeTitlePicture.jpg" >
     <div id="container">
         <nav>
             <div id="logo">
@@ -67,7 +23,15 @@ font-family: arial;
                 <li><a href="">會議簽到</a></li>
                 <li><a href="">會議記錄</a></li>
             </ul>
-        </nav>     
+        </nav>   
+        <header>
+            <div id="links">
+                <a href="">登出</a>
+            </div>
+        </header> 
+        <main>
+            
+        </main> 
     </div>    
     <script src="js/homepage.js"></script>
 </body>
